--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,43 @@
-spring.application.name=demo
+spring.application.name=challenge6
+#logging.level.root=DEBUG
+#logging.level.com.example.challenge6=TRACE
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.show-sql=true
+server.port=8082
+
+# open api swagger
+springdoc.api-docs.path=/api-docs
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+# file handling
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+app.uploadto.cdn=./cdn/
+#app.uploadto.cdnD://folder/subfolder
+
+# security jwt
+security.jwt.enabled=true
+
+# send otp email
+expired.token.password.minute=1200
+#email follow : https://support.google.com/accounts/answer/185833?p=InvalidSecondFactor&visit_id=637690832060530868-1439835364&rd=1
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=badibogeng@gmail.com
+spring.mail.password=vxnlepolwokakdzi
+spring.mail.sender.name=admin
+spring.mail.sender.mail=no-reply-@test.com
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+BASEURL=http://localhost:8082
