--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.application.name=auth
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres2
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres2
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=50
@@ -37,3 +37,7 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 #tls
 spring.mail.properties..mail.smtp.starttls.enable=true
+
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers=localhost:9092
