--- a/master/src/main/resources/application.properties
+++ b/master/src/main/resources/application.properties
@@ -6,10 +6,13 @@ spring.application.name=auth
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres2
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres2
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=50
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.hibernate.ddl-auto=create
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers=localhost:9092
