--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>firebase-admin</artifactId>
             <version>8.0.0</version> <!-- Replace with the latest version -->
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
     </dependencies>
 
     <build>
